--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
     ],
     "env": {
       "PNPM_FROZEN_LOCKFILE": "false"
-    }
+    },
+    "installCommand": "pnpm install --no-frozen-lockfile"
   }
   
