--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "autoprefixer": "10.4.20",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
+    "multer": "^1.4.5-lts.2",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "pg": "^8.14.1",
