--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/react-router-dom": "^5.3.3",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "axios": "^1.8.4",
@@ -16,6 +17,7 @@
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "formidable": "^3.5.2",
+    "lucide-react": "^0.488.0",
     "multer": "^1.4.5-lts.2",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
@@ -25,6 +27,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.0",
     "swiper": "^11.2.6",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
