--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "latest",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "sweetalert2": "^11.19.1",
     "swiper": "^11.2.6",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
